virtual-service-subset-presence-exported-not-match.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
  namespace: bookinfo
spec:
  host: reviews.bookinfo.svc.cluster.local
  subsets:
    - labels:
        version: v2
      name: v2
    - labels:
        version: v3
      name: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
  namespace: bookinfo2
spec:
  host: reviews
  subsets:
    - labels:
        version: v4
      name: v4
  exportTo:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
  namespace: bookinfo3
spec:
  host: reviews
  subsets:
    - labels:
        version: v5
      name: v5
    - labels:
        version: v6
      name: v6
    - labels:
        version: v7
      name: v7
  exportTo:
    - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews-vs
  namespace: bookinfo
spec:
  hosts:
    - reviews.bookinfo.svc.cluster.local
  http:
    - route:
        - destination:
            host: reviews.bookinfo2.svc.cluster.local
            subset: v1
          weight: 33
        - destination:
            host: reviews.bookinfo3.svc.cluster.local
            subset: v3
          weight: 34
        - destination:
            host: reviews.bookinfo.svc.cluster.local
            subset: v2
          weight: 33
